manifests/base/services.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-frontend-svc
spec:
  selector:
    app: demoapp-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-backend-svc
spec:
  selector:
    app: demoapp-backend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb-service
spec:
  selector:
    app: demoapp-frontend
  ports:
    - protocol: TCP
      port: 8089    # Service Port
      targetPort: 80 # The port your React app runs on inside the container
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport-service
spec:
  selector:
    app: demoapp-frontend
  ports:
    - protocol: TCP
      port: 8090     # Service Port
      targetPort: 80  # The port your React app runs on inside the container
  type: NodePort
