manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demoapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp-frontend-svc
            port:
              number: 80
      - path: /api   # Backend API proxy
        pathType: Prefix
        backend:
          service:
            name: demoapp-backend-svc
            port:
              number: 8080
